--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,12 +1,20 @@
 <div class="landing-container">
   <header class="header">
+    <div class="landing-logo">
+      <img
+        id="large-logo"
+        src="https://www.sita.aero/static/images/logo.svg"
+        alt="Logo"
+      />
+      <!-- <span class="logo-text">SITA</span> -->
+    </div>
     <h1 class="main-title">Master Portal</h1>
     <p class="subtitle">Comprehensive Employees data Management System</p>
   </header>
 
   <div class="entities-grid">
-    <div 
-      *ngFor="let entity of entities" 
+    <div
+      *ngFor="let entity of entities"
       class="entity-card"
       (click)="navigateToEntity(entity.route)"
     >
