--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -183,9 +183,8 @@
             [(ngModel)]="currentEmployee.employee_Id"
             name="employee_Id"
             required
-            [readonly]="isEditing"
             class="form-control"
-            [class.readonly]="isEditing"
+            placeholder="Enter employee ID"
           />
         </div>
         <div class="form-group">
@@ -197,6 +196,7 @@
             name="name"
             required
             class="form-control"
+            placeholder="Enter employee name"
           />
         </div>
         <div class="form-group">
@@ -267,6 +267,7 @@
             name="department"
             required
             class="form-control"
+            placeholder="Enter department"
           />
         </div>
         <div class="form-group">
@@ -278,6 +279,7 @@
             name="designation"
             required
             class="form-control"
+            placeholder="Enter designation"
           />
         </div>
         <div class="modal-actions">
