--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -195,9 +195,24 @@
             [(ngModel)]="currentEmployee.name"
             name="name"
             required
+            minlength="2"
+            maxlength="100"
             class="form-control"
             placeholder="Enter employee name"
+            #nameRef="ngModel"
           />
+          <div
+            class="error-message"
+            *ngIf="employeeForm.submitted && nameRef.errors?.['required']"
+          >
+            Name is required
+          </div>
+          <div
+            class="error-message"
+            *ngIf="employeeForm.submitted && (nameRef.errors?.['minlength'] || nameRef.errors?.['maxlength'])"
+          >
+            Name must be between 2 and 100 characters.
+          </div>
         </div>
         <div class="form-group">
           <label for="email">Email</label>
@@ -247,7 +262,7 @@
               !isValidEmail(currentEmployee.email)
             "
           >
-            Please enter a valid email address
+            Invalid email address format.
           </div>
           <div
             class="help-text"
@@ -266,9 +281,24 @@
             [(ngModel)]="currentEmployee.department"
             name="department"
             required
+            minlength="2"
+            maxlength="50"
             class="form-control"
             placeholder="Enter department"
+            #departmentRef="ngModel"
           />
+          <div
+            class="error-message"
+            *ngIf="employeeForm.submitted && departmentRef.errors?.['required']"
+          >
+            Department is required
+          </div>
+          <div
+            class="error-message"
+            *ngIf="employeeForm.submitted && (departmentRef.errors?.['minlength'] || departmentRef.errors?.['maxlength'])"
+          >
+            Department name must be between 2 and 50 characters.
+          </div>
         </div>
         <div class="form-group">
           <label for="designation">Designation</label>
@@ -278,9 +308,24 @@
             [(ngModel)]="currentEmployee.designation"
             name="designation"
             required
+            minlength="2"
+            maxlength="50"
             class="form-control"
             placeholder="Enter designation"
+            #designationRef="ngModel"
           />
+          <div
+            class="error-message"
+            *ngIf="employeeForm.submitted && designationRef.errors?.['required']"
+          >
+            Designation is required
+          </div>
+          <div
+            class="error-message"
+            *ngIf="employeeForm.submitted && (designationRef.errors?.['minlength'] || designationRef.errors?.['maxlength'])"
+          >
+            Designation must be between 2 and 50 characters.
+          </div>
         </div>
         <div class="modal-actions">
           <button
