--- a/src/app/components/grade/grade.component.html
+++ b/src/app/components/grade/grade.component.html
@@ -84,8 +84,23 @@
             [(ngModel)]="currentGrade.gradeLevel"
             name="gradeLevel"
             required
+            minlength="3"
+            maxlength="50"
             class="form-control"
+            #gradeLevelRef="ngModel"
           />
+          <div
+            class="error-message"
+            *ngIf="gradeForm.submitted && gradeLevelRef.errors?.['required']"
+          >
+            Grade level is required
+          </div>
+          <div
+            class="error-message"
+            *ngIf="gradeForm.submitted && (gradeLevelRef.errors?.['minlength'] || gradeLevelRef.errors?.['maxlength'])"
+          >
+            Grade level must be between 3 and 50 characters.
+          </div>
         </div>
         <div class="form-group">
           <label for="gradeDescription">Description</label>
@@ -94,9 +109,24 @@
             [(ngModel)]="currentGrade.gradeDescription"
             name="gradeDescription"
             required
+            minlength="5"
+            maxlength="200"
             class="form-control"
             rows="2"
+            #gradeDescRef="ngModel"
           ></textarea>
+          <div
+            class="error-message"
+            *ngIf="gradeForm.submitted && gradeDescRef.errors?.['required']"
+          >
+            Description is required
+          </div>
+          <div
+            class="error-message"
+            *ngIf="gradeForm.submitted && (gradeDescRef.errors?.['minlength'] || gradeDescRef.errors?.['maxlength'])"
+          >
+            Description must be between 5 and 200 characters.
+          </div>
         </div>
         <div class="modal-actions">
           <button
