--- a/src/app/components/journey/journey.component.html
+++ b/src/app/components/journey/journey.component.html
@@ -90,8 +90,23 @@
             [(ngModel)]="currentJourney.journeyName"
             name="journeyName"
             required
+            minlength="3"
+            maxlength="100"
             class="form-control"
+            #journeyNameRef="ngModel"
           />
+          <div
+            class="error-message"
+            *ngIf="journeyForm.submitted && journeyNameRef.errors?.['required']"
+          >
+            Journey name is required
+          </div>
+          <div
+            class="error-message"
+            *ngIf="journeyForm.submitted && (journeyNameRef.errors?.['minlength'] || journeyNameRef.errors?.['maxlength'])"
+          >
+            Journey name must be between 3 and 100 characters.
+          </div>
         </div>
         <div class="form-group">
           <label for="journeyDescription">Description</label>
@@ -100,9 +115,24 @@
             [(ngModel)]="currentJourney.journeyDescription"
             name="journeyDescription"
             required
+            minlength="10"
+            maxlength="500"
             class="form-control"
             rows="2"
+            #journeyDescRef="ngModel"
           ></textarea>
+          <div
+            class="error-message"
+            *ngIf="journeyForm.submitted && journeyDescRef.errors?.['required']"
+          >
+            Description is required
+          </div>
+          <div
+            class="error-message"
+            *ngIf="journeyForm.submitted && (journeyDescRef.errors?.['minlength'] || journeyDescRef.errors?.['maxlength'])"
+          >
+            Description must be between 10 and 500 characters.
+          </div>
         </div>
         <div class="form-group">
           <label for="destination">Destination</label>
@@ -112,8 +142,23 @@
             [(ngModel)]="currentJourney.destination"
             name="destination"
             required
+            minlength="2"
+            maxlength="50"
             class="form-control"
+            #destinationRef="ngModel"
           />
+          <div
+            class="error-message"
+            *ngIf="journeyForm.submitted && destinationRef.errors?.['required']"
+          >
+            Destination is required
+          </div>
+          <div
+            class="error-message"
+            *ngIf="journeyForm.submitted && (destinationRef.errors?.['minlength'] || destinationRef.errors?.['maxlength'])"
+          >
+            Destination must be between 2 and 50 characters.
+          </div>
         </div>
         <div class="form-group">
           <label for="durationInDays">Duration (days)</label>
